public/stylesheets/snorby.css
/* ... */
#logo {
	margin-left: 20px;
	float: left;
	display: block;
	position: relative;
	overflow: hidden;
}

#header {
	width: 900px;
	height: 50px;
	background: url(../images/header.png) 0 top;
	position: relative;
	display: block;
	overflow: hidden;
}

#container {
	
}

#c_header {
	width: 900px;
	height: 35px;
	background-image: url(../images/c_header.png);
}

#c_body {
	width: 900px;
	background: url(../images/c_content.png) repeat-y;
	padding-bottom: 5px;
}

#c_content_holder {
	padding-left: 40px;
	padding-right: 40px;
	position: relative;
	overflow: visible;
}

#c_content_holder a {
	font-size: small;
}

#count_down{
	text-shadow: #717376 0 1px 0;
	margin-right: 5px;
	color: #fefcff;
	position: relative;
	display: block;
	overflow: hidden;
	margin-top: 8px;
	font-size: x-small;
}

#filter_text_content {
	width: 850px;
	height: 50px;
	position: relative;
	margin: auto;
	padding-top: 10px;
	padding: 20px;
}

#filter_text_content select{
	margin-right: 5px;
}

#filter_text_content label {
	font-size: x-small;
	color: #fff;
}

#filter_text_content input {
	padding: 10px;
}

#filter_content {
	width: 900px;
	height: 80px;
	background-image: url(../images/filter_content.png);
	margin-bottom: -15px;
	margin-top: -5px;
}

#c_footer {
	width: 900px;
	height: 34px;
	background-image: url(../images/c_footer.png);
	left: -100px;
	margin-bottom: 20px;
}

#footer_text {
	color: #b1b1b1;
	font-size: xx-small;
	text-align: center;
	padding-top: 5px;
}

/* @end */

/* @group Menu */

div#user_box{
	color: #fffeff;
	display: block;
	position: relative;
	overflow: hidden;
	padding-left: 15px;
	float: right;
	width: 250px;
}

div#user_avatar{
	border: 1px solid #2f3030;
	display: block;
	position: relative;
	overflow: hidden;
	width: 30px;
	height: 29px;
	float: left;
	margin-right: 8px;
	margin-top: 3px;
}

div#user_data img{
	/*border: 1px solid #727576;*/
}

div#user_name{
	text-shadow: #000 0 1px 0;
	font-size: small;
	color: #fff;
	padding: 3px 0 0;
	margin-top: 0;
	text-decoration: none;
	font-variant: normal;
}

div#user_links{
	text-shadow: #000 0 1px 0;
	font-size: xx-small;
	color: #868888;
	padding-top: 2px;
}
div#user_links a{
	color: #d9dcdc;
	font-size: xx-small;
}

ul,li {
	margin: 0;
	border: 0;
	padding: 0;
	list-style: none;
}

#menubar {
	float: left;
	margin-top: -2px;
	font-size: 11px;
	color: #f3f4ff;
	font-weight: bold;
	height: 39px;
	position: relative;
	display: block;
	overflow: hidden;
	line-height: 30px;
	padding: 0;
	margin-left: 10px;
}

#menubar ul{
	/*margin-right: 60px;*/
	display: block;
	position: relative;
	overflow: hidden;
}

#menubar .menu li {
	height: 39px;
	float: left;
	line-height: 39px;
	padding-right: 1px;
	padding-left: 1px;
}

#menubar .menu li:hover {
	background: url(../images/menu/li_bg.png) repeat-x 0 bottom;
	border-left: 1px solid #373838;
	border-right: 1px solid #676767;
	padding-right: 0;
	padding-left: 0;
	}

#menubar .menu li.start {
	height: 39px;
	float: left;
	background: transparent url(../images/menu/split.png) no-repeat right;
	line-height: 39px;
	width: 2px;
}

#menubar .menu li.first{
	left: 0;
}
/*#menubar .menu li.last{
	background-image: none;
}*/


#menubar .menu li a {
	background: transparent url(../images/menu/split.png) no-repeat right;
	text-shadow: #000 0 1px 0;
	color: #fbf5ff;
	text-decoration: none;
	display: block;
	float: left;
	font-variant: normal;
	font-weight: normal;
	font-style: normal;
	padding: 0 10px;
}

#menubar .menu li a:hover {
	color: #cfd1d1;
}

/* @end */

/* @group More */

#more_text {
	padding-top: 15px;
	color: #777;
}

.more:active {
	background-position-x: 0%;
	background-position-y: -38px;
	color: rgb(102,102,102);
}

.more:hover {
	background-position-x: 0%;
	background-position-y: -78px;
	border: 1px solid #cacaca;
	text-decoration: none;
}

.option_item:hover {
	background-position-x: 0%;
	background-position-y: -78px;
	border: 1px solid #cacaca;
	text-decoration: none;
}

.option_item {
	background-color: white;
	background-image: url(../images/more.gif);
	background-position-x: 0%;
	background-position-y: 0%;
	background-repeat: repeat-x;
	border-bottom: 1px solid rgb(170,170,170);
	border: 1px solid #cfcfcf;
	border-right: 1px solid rgb(170,170,170);
	display: block;
	font-size: 14px;
	height: 22px;
	line-height: 1.5em;
	outline: none;
	padding: 6px 0px;
	text-align: center;
	text-shadow: rgb(255,255,255) 1px 1px 1px;
	width: 100%;
}

.more {
	background-color: white;
	background-image: url(../images/more.gif);
	background-position-x: 0%;
	background-position-y: 0%;
	background-repeat: repeat-x;
	border-bottom: 1px solid rgb(170,170,170);
	border: 1px solid #cfcfcf;
	border-right: 1px solid rgb(170,170,170);
	display: block;
	font-size: 14px;
	height: 22px;
	line-height: 1.5em;
	outline: none;
	padding: 6px 0px;
	text-align: center;
	text-shadow: #fcffff 1px 1px 1px;
	width: 100%;
}

.more_error_page {
	background-color: white;
	background-image: url(../images/more.gif);
	background-position-x: 0%;
	background-position-y: 0%;
	background-repeat: repeat-x;
	border-bottom: 1px solid rgb(170,170,170);
	border: 1px solid #d6d6d6;
	border-right: 1px solid rgb(170,170,170);
	display: block;
	font-size: 10px;
	height: 15px;
	outline: none;
	padding: 6px 0px;
	text-align: center;
	text-shadow: rgb(255,255,255) 1px 1px 1px;
	width: 200px;
	margin-top: 20px;
	line-height: 11px;
}

.more.loading {
	cursor: default!important;
	background-color: #fff;
	background-repeat: no-repeat;
	background-position: 50% 50%;
	border: 1px solid #eee;
	background-image: url('../images/ajax.gif');
	text-indent: -9999px;
}

.more::-moz-focus-inner {
	border: 0;
}

#pagination {
	margin: auto;
}

.pagination {
	font-size: small;
}

/* @end */

/* @group Events */

/* Events */

span#ip_address {
	font-size: small;
	line-height: 1px;
}

span#ip_address img {
	margin-bottom: -2px;
}

strong.title {
	font-weight: normal;
	text-decoration: none;
	font-variant: normal;
	font-style: normal;
	font-size: 1em;
}
/* ... */

